--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@
         <h2 class="section-title">Contact Sales</h2>
         <p class="section-subtitle">Ready to transform your business? Fill out the form below and we'll get back to you within 24 hours.</p>
       </div>
-      <form class="contact-form" action="https://formspree.io/f/xregqaav" method="POST">
+      <form class="contact-form" id="contactForm' action="https://formspree.io/f/xregqaav" method="POST">
         <div class="form-grid">
           <div>
             <label for="name" class="form-label">Name</label>
@@ -1265,6 +1265,32 @@
         }
       });
     });
+    const form = document.getElementById('contactForm');
+
+  form.addEventListener('submit', async function (event) {
+    event.preventDefault(); // stops redirect
+
+    const formData = new FormData(form);
+
+    try {
+      const response = await fetch(form.action, {
+        method: form.method,
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
+      });
+
+      if (response.ok) {
+        form.reset(); // clear inputs
+        alert('Message sent successfully.');
+      } else {
+        alert('There was an error submitting the form.');
+      }
+    } catch (error) {
+      alert('Network error. Please try again.');
+    }
+  });
   </script>
 </body>
 </html>
