--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@
         <h2 class="section-title">Contact Sales</h2>
         <p class="section-subtitle">Ready to transform your business? Fill out the form below and we'll get back to you within 24 hours.</p>
       </div>
-      <form class="contact-form" id="contactForm' action="https://formspree.io/f/xregqaav" method="POST">
+      <form class="contact-form" id="contactForm" action="https://formspree.io/f/xregqaav" method="POST">
         <div class="form-grid">
           <div>
             <label for="name" class="form-label">Name</label>
